# sup-backend

./: .ackrc  .cfnlintrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  mypy.ini  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini
.github/: pull_request_template.m
.github/workflows/: pythonapp.yml
cloudformation/db/: rds.yml
supbackend/: commands.py  config.py  create_app.py  flask.py
supbackend/api/: __init__.py  monitor.py  schema.py
supbackend/api/auth/: __init__.py  schema.py
supbackend/api/billing/: __init__.py  schema.py
supbackend/api/cargo/: schema.py
supbackend/api/me/: __init__.py
supbackend/api/review/: schema.py
supbackend/api/transportation_offer/: __init__.py  schema.py
supbackend/api/transportation_provider/: schema.py
supbackend/api/transportation_tag/: __init__.py  schema.py
supbackend/db/: __init__.py  fixtures.py
supbackend/model/: __init__.py  cargo.py  constant.py  customer_offer.py  provider_review.py  transportation_offer.py  transportation_provider.py  transportation_tag.py  user.py
supbackend/model/many_to_many/: customer_offer.py  offer_tag.py
supbackend/test/: conftest.py  test_app.py  test_auth.py  test_billing.py  test_transportation_offer_api.py  test_transportation_tag_api.py
